<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtInsttNm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_list_item_insttNm_alt"
        app:layout_constraintBottom_toTopOf="@+id/txtDocNm"
        app:layout_constraintStart_toStartOf="@+id/txtDocNm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtDocNm"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:gravity="center_vertical"
        android:text="@string/activity_list_item_docNm_alt"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInsttNm" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtDocNm"
        app:layout_constraintTop_toBottomOf="@+id/txtDocNm">

        <TextView
            android:id="@+id/txtIssuDtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text="@string/activity_list_item_issuDt_title"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/txtIssuDt"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="2022-11-20"
            android:textAlignment="viewStart"
            tools:layout_weight="0.4" />

        <TextView
            android:id="@+id/txtValidDtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/activity_list_item_validDt_title"
            android:textAlignment="viewStart"
            tools:layout_weight="0.1" />

        <TextView
            android:id="@+id/txtValidDt"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="2022-11-20"
            android:textAlignment="viewStart"
            tools:layout_weight="0.4" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>