<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.07" />

    <TextView
        android:id="@+id/txtListTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeTextType="uniform"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/activity_list_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtListSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/activity_list_sub_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/txtDateFrom"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#C8C5C5"
        android:gravity="center"
        android:text="@string/activity_list_dateFrom_alt"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtDateTo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtListSubTitle" />

    <TextView
        android:id="@+id/txtDateTo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:text="@string/activity_list_dateTo_alt"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtDateFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtDateFrom"
        app:layout_constraintTop_toTopOf="@+id/txtDateFrom"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSrch"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_background"
        android:text="@string/activity_list_srch"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/txtDateTo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtDateFrom"
        app:layout_constraintTop_toBottomOf="@+id/txtDateFrom" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSrch" />

</androidx.constraintlayout.widget.ConstraintLayout>